# prizebooth-sc

./: .$Untitled Diagram.drawio.bkp  Cargo.toml  Untitled Diagram.drawio  readme.md
artifacts/: admin.wasm  checksums.txt  checksums_intermediate.txt  cw20_base.wasm  cw721_metadata_onchain.wasm  my_cw20.wasm  prizebooth.wasm
contracts/cw20-base/: Cargo.toml
contracts/cw20-base/src/: contract.rs  msg.rs
contracts/cw721-base/: Cargo.toml
contracts/cw721-base/examples/: schema.rs
contracts/cw721-base/src/: execute.rs  helpers.rs  msg.rs
contracts/cw721-metadata-onchain/: Cargo.toml
contracts/prizebooth/: Cargo.toml
contracts/prizebooth/schema/: prizebooth.json
contracts/prizebooth/schema/raw/: execute.json  instantiate.json  query.json  response_to_pool_list.json
contracts/prizebooth/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs  test.rs  tests.rs
