[package]
name          = "my_cw721"
description   = "Basic implementation cw721 NFTs"
authors       = [
  "Ethan Frey <ethanfrey@users.noreply.github.com>",
  "Orkun Külçe <orkun@deuslabs.fi>",
]
version       =  "0.1.0" 
edition       =  "2021" 

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = {version = "1.2.5"}
cosmwasm-schema = {version = "1.2.5"}
cw-storage-plus = "1.0.1"
thiserror = "1.0.40"
cw-utils = "1.0.1"
serde = "1.0.163"
cw20 = "1.0.1"
cw721 = "0.17.0"
schemars = "0.8.12"
cw-ownable      = "0.5.1"
cw2 = {git = "https://github.com/mars-protocol/cw-plus", rev = "1a3a944"}
cw721-base-016  = {version = "0.16.0", package = "cw721-base"}
cw721-base = "0.17.0"

[dev-dependencies]
cw-multi-test   = "0.16.4"