[package]
name          = "cw721-metadata-onchain"
description   = "Example extending CW721 NFT to store metadata on chain"
authors       = [
  "Ethan Frey <ethanfrey@users.noreply.github.com>",
  "Orkun Külçe <orkun@deuslabs.fi>",
]
version = "0.1.0"
edition =  "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { version = "1.2.5"}
cosmwasm-std    = { version = "1.2.5" }
cw2             = { version = "1.0.1" }
cw721           = { version = "0.17.0" }
cw721-base      = { version = "0.17.0", features = ["library"] }
schemars        = { version = "0.8.1"}
serde           = { version = "1.0.2" }