[package]
name = "prizebooth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = {version = "1.2.5"}
cosmwasm-schema = {version = "1.2.5"}
cw-storage-plus = "1.0.1"
thiserror = "1.0.40"
cw-utils = "1.0.1"
serde = "1.0.163"
cw20 = "1.0.1"
cw721 = "0.17.0"
schemars = "0.8.12"
rand = "0.8.5"
my_cw721 = {path = "../cw721-base"}
my_cw20 = {path = "../cw20-base"}

[dev-dependencies]
cw-multi-test = "0.16.4"