[package]
name = "prizebooth"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = {version = "1.2.5"}
cosmwasm-schema = {version = "1.2.5"}
cw-storage-plus = "1.0.1"
thiserror = "1.0.40"
cw-utils = "1.0.1"
serde = "1.0.163"
cw20 = "1.0.1"
cw20-base = "1.0.1"
cw721 = "0.17.0"
cw721-base = "0.17.0"
schemars = "0.8.12"


[dev-dependencies]
cw-multi-test = "0.16.4"

